--- a/MobileAcademy2/app/src/main/res/layout/activity_quotes.xml
+++ b/MobileAcademy2/app/src/main/res/layout/activity_quotes.xml
@@ -11,6 +11,30 @@
         android:id="@+id/quotes_list_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8dp"
+        android:background="@android:color/white"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingBottom="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"/>
+
+    <GridView
+        android:id="@+id/quotes_grid_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:numColumns="2"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8dp"
+        android:background="@android:color/white"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:paddingBottom="8dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
