--- a/MobileAcademy3/app/src/main/res/layout/activity_main.xml
+++ b/MobileAcademy3/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:theme="@style/CustomToolbarStyle"
         app:title="NewsApp"
         app:titleTextColor="@android:color/white"/>
 
@@ -44,6 +44,36 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scrollbars="vertical"/>
+
+            <FrameLayout
+                android:id="@+id/progress_bar_container"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:background="#20000000"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="visible">
+
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:minWidth="100dp"
+                    android:minHeight="100dp"
+                    android:progress="0"
+                    android:max="100"
+                    android:padding="8dp"
+                    android:rotation="180"
+                    android:layout_gravity="center"
+                    android:indeterminateDrawable="@xml/progress"/>
+            </FrameLayout>
+
         </RelativeLayout>
+
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
