--- a/MobileAcademy3/app/src/main/res/layout/layout_news_article.xml
+++ b/MobileAcademy3/app/src/main/res/layout/layout_news_article.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -23,13 +24,18 @@
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/article_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/article_image"
-            android:layout_toStartOf="@+id/article_date"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:lines="2"
             android:ellipsize="end"
             android:text="@string/placeholder_title_text"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:textColor="@android:color/black"/>
 
         <android.support.v7.widget.AppCompatTextView
@@ -37,8 +43,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/article_image"
+            android:layout_below="@+id/article_title"
             android:text="@string/placeholder_date_text"
+            android:layout_margin="4dp"
+            android:textSize="16sp"
+            android:textStyle="italic"
             android:textColor="@android:color/black"/>
 
     </RelativeLayout>
