--- a/MobileAcademy3/app/src/main/res/values/styles.xml
+++ b/MobileAcademy3/app/src/main/res/values/styles.xml
@@ -7,5 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    
+    <style name="CustomToolbarStyle" parent="AppTheme">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorTertiary">@android:color/white</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="app:titleTextColor">@android:color/white</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_white_24dp</item>
+    </style>
 
 </resources>
