--- a/MobileAcademy3/app/src/main/res/layout/layout_news_article.xml
+++ b/MobileAcademy3/app/src/main/res/layout/layout_news_article.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:orientation="vertical">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/article_image"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:minHeight="75dp"
-            android:minWidth="75dp"
-            app:srcCompat="@drawable/ic_image_black_24dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"/>
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/ic_image_gray_24dp"
+            android:layout_gravity="center_horizontal"/>
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/article_title"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/article_image"
-            android:layout_alignParentEnd="true"
+            android:layout_gravity="start"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:lines="2"
@@ -42,13 +38,13 @@
             android:id="@+id/article_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/article_title"
+            android:layout_gravity="end"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:text="@string/placeholder_date_text"
-            android:layout_margin="4dp"
             android:textSize="16sp"
             android:textStyle="italic"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/darker_gray"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
