--- a/MobileAcademy3/app/src/main/res/menu/menu_main_activity.xml
+++ b/MobileAcademy3/app/src/main/res/menu/menu_main_activity.xml
@@ -3,9 +3,16 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_search"
+        android:title="@string/search_icon_text"
+        android:icon="@drawable/ic_search_white_24dp"
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <item
         android:id="@+id/refresh_button"
         android:title="@string/refresh_menu_item_text"
         android:icon="@drawable/ic_refresh_black_24dp"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
 </menu>
